--- a/_posts/2017-05-17-welcome.md
+++ b/_posts/2017-05-17-welcome.md
@@ -6,4 +6,4 @@ categories: welcome
 ---
 
 Привет!
-Несмотря на [резюме](../about.md) на английском, в блоге все будет по-русски. Писать буду редко, блог будет технический. О коде, о тестировании и о том, что рядом.
+Несмотря на [резюме](http://demshin.github.io/about) на английском, в блоге все будет по-русски. Писать буду редко, блог будет технический. О коде, о тестировании и о том, что рядом.
