--- a/_drafts/2017-09-18-DataDog.md
+++ b/_drafts/2017-09-18-DataDog.md
@@ -11,14 +11,17 @@ categories: monitoring
 
 Один хороший человек порекомендовал мониторить сервисы при помощи DataDog. Посмотрел я на описание того, что он может и решил попробовать.
 
-## Зачем нужен монитоинг
+## Зачем нужен мониторинг
+
 Кажется, что это банальный вопрос, но всё же на него надо ответить. И отвечать на него нужно с разных сторон.
 
-## Кому нужен мониторинг
+### Кому нужен мониторинг
 
 1. **Бизнесу**. Говорит работает ли продукт, помогает улучшать продукт, оценивать стоимость (в том числе стоимость простоя).
 2. **IT службам** (саппорт, разработка, эксплуатация и др.). Оценка реального состояния системы, найти и диагностировать проблемы, помощь в жизненном цикле системы, помогает показать бизнесу куда тратятся деньги. Нет мониторинга - нет работы, мы ничего не можем утверждать о работоспособности системы, точнее можем, но это голословно.
 
-## Какие параметры нужно мониторить
+### Какие компоненты у мониторинга
 
-Согласитесь, что
+1. **Статусный мониторинг**. Проверяются все компоненты вашей системы на работоспособность.
+2. **Мониторинг тенденций**. Сбор измений в различный показателях и их последующий анализ. 
+3. **Бизнес-мониторинг**. Наверное, самый важная часть мониторинга вообще. Наблюдение за отклонениями в бизнес показателях. В идеале, который возможно и не достижим, мониторинг может сказать о том, сколько мы потеряли или зработали денег при сбоях/изменениях в нашей системе.
