--- a/_posts/2017-05-17-jekyll.md
+++ b/_posts/2017-05-17-jekyll.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Как все началось"
 date:   2017-05-17 15:09:00 +0500
-categories: jekyll, blog
+categories: jekyll blog
 ---
 
 Вдохновился я на этот блог увидев [резюме](http://sdfgh153.ru/cv/) Семена Новикова. Хотя попытки были и раньше, если покопаться в коммитах [исходников](https://github.com/demshin/demshin.github.io) блога, то можно увидеть.
