need more https :)

--- a/_posts/2017-05-12-welcome.md
+++ b/_posts/2017-05-12-welcome.md
@@ -6,4 +6,4 @@ categories: welcome
 ---
 
 Привет!
-Несмотря на [резюме](http://demsh.in/about) на английском, в блоге все будет по-русски. Писать буду редко, блог будет технический. О коде, о тестировании и о том, что рядом.
+Несмотря на [резюме](https://demsh.in/about) на английском, в блоге все будет по-русски. Писать буду редко, блог будет технический. О коде, о тестировании и о том, что рядом.
