--- a/_posts/2017-05-17-jekyll.md
+++ b/_posts/2017-05-17-jekyll.md
@@ -5,9 +5,9 @@ date: 2017-05-17 15:09:00 +0500
 categories: jekyll blog
 ---
 
-Вдохновился я на этот блог увидев [резюме](http://sdfgh153.ru/cv/) Семена Новикова. Хотя попытки были и раньше, если покопаться в коммитах [исходников](https://github.com/demshin/demsh.in) блога, то можно увидеть.
+Вдохновился я на этот блог увидев [резюме](https://sdfgh153.ru/cv/) Семена Новикова. Хотя попытки были и раньше, если покопаться в коммитах [исходников](https://github.com/demshin/demsh.in) блога, то можно увидеть.
 
 Также на создание блога повлияли:
 
-- статья ["Покорение Jekyll"](http://www.unix-lab.org/posts/jekyll/);
+- статья ["Покорение Jekyll"](https://www.unix-lab.org/posts/jekyll/);
 - курс [Deploy a Website](https://www.codecademy.com/learn/deploy-a-website) на замечательном для новичков ресурсе [Codecademy](https://www.codecademy.com), где помимо курса о Jekyll есть куча простеньких курсов о разных языках.
