--- a/_posts/2018-02-22-S3-as-disk.md
+++ b/_posts/2018-02-22-S3-as-disk.md
@@ -10,8 +10,8 @@ categories: s3 aws ubuntu
 Хм. Нашел черновик не дописанный. Решил быстро его дописать.
 
 В попытке решить вопрос использовали [s3fs](https://github.com/s3fs-fuse/s3fs-fuse). Он работает, но непозволительно медленно.
-В результате разработчика пришлось изпользовать API амазона, что быстро и прекрасно работает и приложение не зависит от настроек сервера.
+В результате разработчикам пришлось использовать API AWS, что быстро и прекрасно работает и приложение не зависит от настроек сервера.
 
 И это прекрасно!
 
-Как итог: не рекомендую использовать s3fs, используйте способы рекомендуемые амазоном.
+Как итог: не рекомендую использовать s3fs, используйте способы рекомендуемые AWS.
